@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-11T08:13:39Z",
+  "timestamp" : "2022-06-12T01:01:30Z",
   "count_outdated" : 328,
   "uniques_outdated" : 175,
-  "count" : 356,
+  "count" : 357,
   "uniques" : 192,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
